<resources>
    <string name="debug">true</string>
    <string name="app_name">NotifyYou</string>
    <string name="database_name">NotifyYouDatabase</string>
    <string name="notification_channel_id_for_pin_unpin_operation" translatable="false">NotifyYou\'sPin-UnpinNotificationChannelId</string>
    <string name="notification_channel_name_for_pin_unpin_operation">Pinned TileItems</string>
    <string name="notification_channel_id_for_tileitem_alarm" translatable="false">NotifyYou\'sAlarmNotificationChannelId</string>
    <string name="notification_channel_name_for_tileitem_alarm">TileItems Alarm</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pinned_area_label">Pinned TileItems</string>
    <string name="unpinned_area_label">My TileItems Collection</string>
    <!-- Preference Titles -->
    <string name="messages_header">Notifications</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="resend_notification_interval">Time Interval to Resend Notifications</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Preference Titles -->
    <string name="alarm_header">Alarm</string>

    <!-- Messages Preferences -->
    <string name="alarm_tunes_picker">Alarm Tunes</string>
    <string name="empty_tile_item_placeholder_title">It\'s so empty here!</string>
    <string name="empty_tile_item_placeholder_body">Let\'s create new TileItem, shall we?</string>
    <string name="edit_text_tile_item_body_placeholder">Spare some detail about how will you do it</string>
    <string name="edit_text_tile_item_title_placeholder">What should I do later? (required)</string>
    <string name="text_view_attach_alarm_label">Attach alarm for this note?</string>
    <string name="text_view_pin_by_default_label">Immidiately pin this note?</string>
    <string name="text_view_pin_label">Pin this note?</string>
    <string name="new_tile_item_cta">Submit</string>
</resources>
