<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.EditTileitemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/edit_text_tile_item_title_placeholder"
            android:textColorHint="@color/cardview_shadow_start_color"
            app:boxStrokeColor="@color/cardview_shadow_start_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_title"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/edit_text_tile_item_body_placeholder"
            android:textColorHint="@color/cardview_shadow_start_color"
            app:boxStrokeColor="@color/cardview_shadow_start_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:minHeight="130dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/useAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_attach_alarm_label" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/CV_alarmContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/material_dynamic_neutral_variant95"
            android:orientation="vertical"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/TV_selectedTime"
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textColor="@color/colorOnSurfaceForText"
                    android:textFontWeight="800" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/NotificationButton"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="58dp"
            android:text="@string/new_tile_item_cta"
            android:textFontWeight="800" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>